# OpenRouter-Image-Recognition-MCP-Server

./: .clineignore  .clinerules  .env.example  .gitignore  README.md  pyproject.toml
src/openrouter_image_mcp/: __init__.py  server.py
